--- a/estilo.css
+++ b/estilo.css
@@ -32,7 +32,7 @@ h1{
   margin-top: 80px;
   margin-right: 70px;
   margin-left: 20px;
-  margin: 0 auto;
+  background-position: center;
 }
 p{
   font-size: 42px;
